--- a/Inicio/styles.css
+++ b/Inicio/styles.css
@@ -21,10 +21,15 @@ body{
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	cursor: pointer;
+	transition: all 400ms ease;
 
 	&:hover {
-		box-shadow: inset 2px 2px 4px 1px rgba(0,0,0,0.25);
-		transform: scale(0.95);
+		box-shadow: 1px 2px 10px 0px rgba(171, 171, 171, 0.50);
+		transform: translateY(-3%);
+		-webkit-transform: translateY(-3%);
+		-moz-transform: translateY(-3%);
+		-ms-transform: translateY(-3%);
+		-o-transform: translateY(-3%);	
 	}
 }
 
@@ -46,9 +51,15 @@ body{
 	-moz-osx-font-smoothing: grayscale;
 	cursor: pointer;
 
+	transition: all 400ms ease;
+
 	&:hover {
-		box-shadow: inset 2px 2px 4px 1px rgba(0,0,0,0.25);
-		transform: scale(0.95);
+		box-shadow: 1px 2px 10px 0px rgba(171, 171, 171, 0.50);
+		transform: translateY(-3%);
+		-webkit-transform: translateY(-3%);
+		-moz-transform: translateY(-3%);
+		-ms-transform: translateY(-3%);
+		-o-transform: translateY(-3%);	
 	}
 }
 
@@ -70,9 +81,15 @@ body{
 	-moz-osx-font-smoothing: grayscale;
 	cursor: pointer;
 
+	transition: all 400ms ease;
+
 	&:hover {
-		box-shadow: inset 2px 2px 4px 1px rgba(0,0,0,0.25);
-		transform: scale(0.95);
+		box-shadow: 1px 2px 10px 0px rgba(171, 171, 171, 0.50);
+		transform: translateY(-3%);
+		-webkit-transform: translateY(-3%);
+		-moz-transform: translateY(-3%);
+		-ms-transform: translateY(-3%);
+		-o-transform: translateY(-3%);	
 	}
 }
 
@@ -150,6 +167,11 @@ body{
 			position:  absolute;
 			top: 160px;
 			left: 55px;
+			border-radius: 20px;
+			-webkit-border-radius: 20px;
+			-moz-border-radius: 20px;
+			-ms-border-radius: 20px;
+			-o-border-radius: 20px;
 		}
 	}
 
@@ -229,6 +251,11 @@ body{
 			position:  absolute;
 			top: 160px;
 			left: 55px;
+			border-radius: 20px;
+			-webkit-border-radius: 20px;
+			-moz-border-radius: 20px;
+			-ms-border-radius: 20px;
+			-o-border-radius: 20px;
 		}
 	}
 
@@ -303,6 +330,14 @@ body{
 			padding-left: 2px;
 			color: #ccc;
 		}
+
+		.bordes{
+			border-radius: 75px;
+			-webkit-border-radius: 75px;
+			-moz-border-radius: 75px;
+			-ms-border-radius: 75px;
+			-o-border-radius: 75px;
+}
 
 		img{
 			width: 65%;
