--- a/CPlushPlush/styles.css
+++ b/CPlushPlush/styles.css
@@ -55,7 +55,7 @@ hr {
 
 #Barralateral {
   float: left;
-  width: 30%;
+  width: 31%;
 
   h2{
     font-size: 24px;
@@ -83,7 +83,7 @@ hr {
 
   p {
     position: relative;
-    display: inline-block; /* Para que el borde inferior se ajuste al contenido */
+    display: inline-block;
   }
 
   p::after {
@@ -100,7 +100,7 @@ hr {
 #Contenido{
   margin-top: -25px;
   float: right;
-  width: calc(70% - 60px);
+  width: calc(69% - 60px);
   padding: 30px;
 
   .article{
