--- a/CPlushPlush/styles.css
+++ b/CPlushPlush/styles.css
@@ -1,3 +1,83 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400);
+
+.frame {
+	position: absolute;
+	top: 10%;
+	left: 10%;
+	width: 200px;
+	height: 400px;
+	margin-top: -200px;
+	margin-left: -200px;
+	border-radius: 2px;
+	overflow: hidden;
+	font-family:'Segoe UI', Helvetica, 'Apple Color Emoji', Arial, sans-serif, 'Segoe UI Emoji', 'Segoe UI Symbol';
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.button {
+	position: absolute;
+	z-index: 1;
+	width: 125px;
+	height: 0px;
+	top: 140px;
+	left: 70px;
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 20px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	text-align: center;
+	transition: all .3s ease-in-out;
+	cursor: pointer;
+  
+	&:before {
+		position: absolute;
+		z-index: -1;
+		top: 0;
+		left: 0;
+		content: '';
+		display: block;
+		width: 120px;
+		height: 20px;
+		background: #fff;
+		transform: translate(0, 0);
+		transition: all .3s ease-in-out;
+		box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.1);
+  }
+
+	&:after {
+		position: absolute;
+		z-index: -2;
+		top: 0;
+		left: 0;
+		content: '';
+		display: block;
+		width: 120px;
+		height: 20px;
+		background: RGB(86, 13, 100);
+		transform: translate(13px, 12px);
+		transition: all .3s ease-in-out;
+		box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.2);
+  }
+
+	&:hover {
+		transform: translate(7px, 12px);
+		color: #fff;
+    
+		&:before {
+			background: RGB(86, 13, 100);
+			box-shadow: 4px 4px 8px 0px rgba(0,0,0,0.2);
+		}
+
+		&:after {
+			transform: translate(-15px, -10px);
+			background: #fff;
+		}
+	}
+}
+
+
 * {
   margin: 0px;
   padding: 0px;
