--- a/CPlushPlush/styles.css
+++ b/CPlushPlush/styles.css
@@ -5,7 +5,7 @@
 	top: 10%;
 	left: 10%;
 	width: 200px;
-	height: 400px;
+	height: 180px;
 	margin-top: -200px;
 	margin-left: -200px;
 	border-radius: 2px;
@@ -82,12 +82,17 @@
   margin: 0px;
   padding: 0px;
 }
-
 #Contanier {
-  margin-top: -350px;
-  width: 80%;
-  left: 40px;
+  margin-top: -200px;
+  width: calc(100% - 200px);
   margin-left: 100px;
+
+  .ImagenRecortada {
+    display: flex;
+    margin-top: -50px;
+    /*clip-path: polygon(0 38%, 100% 38%, 100% 67%, 0 67%);*/
+    clip-path: polygon(0 38%, 100% 38%, 100% 55%, 0 55%);
+  }
 }
 
 hr {
@@ -101,30 +106,31 @@ hr {
   clear: both;
 }
 
-.ImagenRecortada {
-  display: block;
-  margin-top: -250px;
-  /*clip-path: polygon(0 38%, 100% 38%, 100% 67%, 0 67%);*/
-  clip-path: polygon(0 38%, 100% 38%, 100% 55%, 0 55%);
+#Portada{
+  width: 100%;
 }
 
 #Inicio{
-  .MiniLogo {
+  width: 100%;
+  margin-top: -250px;
+
+  img {
     position: relative;
-    top: 38px;
+    top: 5px;
   }
 
-  .titulopagina {
+  h2 {
+    margin-top: -33px;
     cursor: default;
-    left: 50px;
+    left: 150px;
     margin-left: 50px;
   }
 
-  .Descripcion {
+  p {
     cursor: default;
   }
 
-  .Tema {
+  h5 {
     cursor: default;
     margin-top: 5px;
     margin-bottom: 0px;
@@ -135,7 +141,7 @@ hr {
 
 #Barralateral {
   float: left;
-  width: 31%;
+  width: 30%;
 
   h2{
     font-size: 24px;
@@ -143,7 +149,7 @@ hr {
   }
 
   hr {
-    width: 300px;
+    width: 350px;
     border: none;
     height: 1px;
     background-color: RGB(46, 47, 47);
@@ -163,7 +169,7 @@ hr {
 
   p {
     position: relative;
-    display: inline-block;
+    display: inline-block; /* Para que el borde inferior se ajuste al contenido */
   }
 
   p::after {
@@ -178,9 +184,8 @@ hr {
 }
 
 #Contenido{
-  margin-top: -25px;
   float: right;
-  width: calc(69% - 60px);
+  width: calc(70% - 60px);
   padding: 30px;
 
   .article{
@@ -198,8 +203,8 @@ hr {
   }
 }
 
-footer {
-  text-align: center;
+#PieDePagina {
+  width: 100%;
   height: 35px;
   line-height: 35px;
 
