--- a/VisualBasic/styles.css
+++ b/VisualBasic/styles.css
@@ -5,7 +5,7 @@
 	top: 10%;
 	left: 10%;
 	width: 200px;
-	height: 400px;
+	height: 180px;
 	margin-top: -200px;
 	margin-left: -200px;
 	border-radius: 2px;
@@ -55,7 +55,7 @@
 		display: block;
 		width: 120px;
 		height: 20px;
-		background: #042c84;
+		background: #1f5ee4;
 		transform: translate(13px, 12px);
 		transition: all .3s ease-in-out;
 		box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.2);
@@ -66,7 +66,7 @@
 		color: #fff;
     
 		&:before {
-			background: #042c84;
+			background: #1f5ee4;
 			box-shadow: 4px 4px 8px 0px rgba(0,0,0,0.2);
 		}
 
@@ -81,12 +81,17 @@
   margin: 0px;
   padding: 0px;
 }
-
 #Contanier {
-  margin-top: -350px;
-  width: 80%;
-  left: 40px;
+  margin-top: -200px;
+  width: calc(100% - 200px);
   margin-left: 100px;
+
+  .ImagenRecortada {
+    display: flex;
+    margin-top: -50px;
+    /*clip-path: polygon(0 38%, 100% 38%, 100% 67%, 0 67%);*/
+    clip-path: polygon(0 38%, 100% 38%, 100% 55%, 0 55%);
+  }
 }
 
 hr {
@@ -100,30 +105,31 @@ hr {
   clear: both;
 }
 
-.ImagenRecortada {
-  display: block;
-  margin-top: -250px;
-  /*clip-path: polygon(0 38%, 100% 38%, 100% 67%, 0 67%);*/
-  clip-path: polygon(0 38%, 100% 38%, 100% 55%, 0 55%);
+#Portada{
+  width: 100%;
 }
 
 #Inicio{
-  .MiniLogo {
+  width: 100%;
+  margin-top: -250px;
+
+  img {
     position: relative;
-    top: 42px;
+    top: 5px;
   }
 
-  .titulopagina {
+  h2 {
+    margin-top: -33px;
     cursor: default;
-    left: 50px;
+    left: 150px;
     margin-left: 50px;
   }
 
-  .Descripcion {
+  p {
     cursor: default;
   }
 
-  .Tema {
+  h5 {
     cursor: default;
     margin-top: 5px;
     margin-bottom: 0px;
@@ -142,7 +148,7 @@ hr {
   }
 
   hr {
-    width: 300px;
+    width: 350px;
     border: none;
     height: 1px;
     background-color: RGB(46, 47, 47);
@@ -177,7 +183,6 @@ hr {
 }
 
 #Contenido{
-  margin-top: -25px;
   float: right;
   width: calc(70% - 60px);
   padding: 30px;
@@ -197,8 +202,8 @@ hr {
   }
 }
 
-footer {
-  text-align: center;
+#PieDePagina {
+  width: 100%;
   height: 35px;
   line-height: 35px;
 
