--- a/CSharp/styles.css
+++ b/CSharp/styles.css
@@ -77,6 +77,106 @@
 	}
 }
 
+.Etiquetas1{
+  display: inline-block;
+  padding: 2px 4px;
+  background-color: #6E3630;
+  text-decoration: none;
+  border-radius: 3px;
+  margin-top: 1px;
+  color: RGB(212, 212, 213);
+}
+
+.Etiquetas2{
+  display: inline-block;
+  padding: 2px 4px;
+  background-color: #69314C;
+  text-decoration: none;
+  border-radius: 3px;
+  margin-top: 1px;
+  color: RGB(212, 212, 213);
+}
+
+.Etiquetas3{
+  display: inline-block;
+  padding: 2px 4px;
+  background-color: #482E64;
+  text-decoration: none;
+  border-radius: 3px;
+  margin-top: 1px;
+  color: RGB(212, 212, 213);
+}
+
+.Etiquetas4{
+  display: inline-block;
+  padding: 2px 4px;
+  background-color: #29446C;
+  text-decoration: none;
+  border-radius: 3px;
+  margin-top: 1px;
+  color: RGB(212, 212, 213);
+}
+
+.Etiquetas5{
+  display: inline-block;
+  padding: 2px 4px;
+  background-color: #2B593F;
+  text-decoration: none;
+  border-radius: 3px;
+  margin-top: 1px;
+  color: RGB(212, 212, 213);
+}
+
+.Etiquetas6{
+  display: inline-block;
+  padding: 2px 4px;
+  background-color: #89632B;
+  text-decoration: none;
+  border-radius: 3px;
+  margin-top: 1px;
+  color: RGB(212, 212, 213);
+}
+
+.Etiquetas7{
+  display: inline-block;
+  padding: 2px 4px;
+  background-color: #844C1D;
+  text-decoration: none;
+  border-radius: 3px;
+  margin-top: 1px;
+  color: RGB(212, 212, 213);
+}
+
+.Etiquetas8{
+  display: inline-block;
+  padding: 2px 4px;
+  background-color: #603B2D;
+  text-decoration: none;
+  border-radius: 3px;
+  margin-top: 1px;
+  color: RGB(212, 212, 213);
+}
+
+.Etiquetas9{
+  display: inline-block;
+  padding: 2px 4px;
+  background-color: #5A5A5A;
+  text-decoration: none;
+  border-radius: 3px;
+  margin-top: 1px;
+  color: RGB(212, 212, 213);
+}
+
+.Etiquetas10{
+  display: inline-block;
+  padding: 2px 4px;
+  background-color: #363737;
+  text-decoration: none;
+  border-radius: 3px;
+  margin-top: 1px;
+  color: RGB(212, 212, 213);
+}
+
 * {
   margin: 0px;
   padding: 0px;
@@ -152,7 +252,7 @@ hr {
 
 #Barralateral {
   float: left;
-  width: 30%;
+  width: 20%;
   order: 1;
 
   h2{
@@ -171,7 +271,7 @@ hr {
   .temario {
     cursor: pointer;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 18px;
     margin-top: 5px;
     margin-bottom: 5px;
     padding-bottom: 1px;
@@ -193,53 +293,65 @@ hr {
 }
 
 #Contenido{
-  background-color: rgb(174, 255, 127);
   float: right;
-  width: calc(70% - 40px);
+  width: calc(80% - 40px);
   order: 2;
   padding: 20px;
-}
 
-.card-container{
-  background-color: aquamarine;
-  display: flex;  
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.card{
-  background-color: rgb(255, 246, 127);
-  width: 180px;
-  border-radius: 8px;
-  overflow: hidden;
-  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
-  margin: 10px;
-  transition: all 400ms ease; /* Transición de todas las propiedades durante 400ms con efecto de suavizado */
-  cursor: pointer;
-
-  img{
-    width: 100%;
-    height: auto;
-  }
-    /* Estilos al pasar el ratón sobre el elemento */
-    &:hover {
-        box-shadow: 1px 2px 10px 0px rgba(171, 171, 171, 0.50); /* Sombra */
-        transform: translateY(-3%); /* Translación hacia arriba */
-    }
-}
-
-.card-content{
-  background-color: rgb(255, 157, 127);
-  padding: 8px;
-
-  h5{
-    font-size: 14px;
-    margin-bottom: 8px;
+  h3.Etiquetas1, h3.Etiquetas2, h3.Etiquetas3, h3.Etiquetas4, h3.Etiquetas5, h3.Etiquetas6, h3.Etiquetas7, h3.Etiquetas8, h3.Etiquetas9, h3.Etiquetas10{
+    font-size: 18px;
   }
 
-  p{
+  p.Etiquetas1, p.Etiquetas2, p.Etiquetas3, p.Etiquetas4, p.Etiquetas5, p.Etiquetas6, p.Etiquetas7, p.Etiquetas8, p.Etiquetas9, p.Etiquetas10{
     font-size: 12px;
-    line-height:  1.3;
+  }
+
+  .card-container{
+    display: flex;  
+    justify-content: center;
+    flex-wrap: wrap;
+
+    a{
+      color: inherit ;
+      text-decoration: none;
+    }
+
+    .card{
+      background-color: RGB(38, 39, 39);
+      width: 200px;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
+      margin: 12px;
+      transition: all 400ms ease; /* Transición de todas las propiedades durante 400ms con efecto de suavizado */
+      cursor: pointer;
+
+      img{
+        width: 100%;
+        height: auto;
+      }
+
+      /* Estilos al pasar el ratón sobre el elemento */
+      &:hover {
+          box-shadow: 1px 2px 10px 0px rgba(171, 171, 171, 0.50); /* Sombra */
+          transform: translateY(-3%); /* Translación hacia arriba */
+      }
+    }
+
+    .card-content{
+      background-color: RGB(38, 39, 39);
+      padding: 5px;
+
+      h5{
+        font-size: 16px;
+        margin-bottom: 2px;
+      }
+
+      p{
+        font-size: 16px;
+        margin-bottom: 2px;
+      }
+    }
   }
 }
 
