--- a/VisualBasic/styles.css
+++ b/VisualBasic/styles.css
@@ -409,6 +409,29 @@ hr {
   }
 }
 
+@media (min-width: 320px) {
+  #Contenido {
+    .card-container{
+      .card{
+        width: 100px;
+        margin: 4px;
+      }
+
+      .card-content{
+        h5{
+          font-size: 12px;
+          margin-bottom: 2px;
+        }
+  
+        p{
+          font-size: 10px;
+          margin-bottom: 2px;
+        }
+      }
+    }
+  }
+}
+
 body {
   background: #181919;
   font-family: inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
