--- a/VisualBasic/styles.css
+++ b/VisualBasic/styles.css
@@ -456,6 +456,28 @@ hr {
 }
 
 
+@media (max-width: 310px) {
+  #Contenido {
+    .card-container{
+      .card{
+        width: 96px;
+        margin: 4px;
+      }
+
+      .card-content{
+        h5{
+          font-size: 12px;
+          margin-bottom: 2px;
+        }
+  
+        p{
+          font-size: 10px;
+          margin-bottom: 2px;
+        }
+      }
+    }
+  }
+}
 
 body {
   background: #181919;
