--- a/CPlushPlush/styles.css
+++ b/CPlushPlush/styles.css
@@ -411,7 +411,7 @@ hr {
 
 @media (max-width: 405px) {
   #Contenido {
-    background-color: #1f5ee4;
+    background-color: #1fe42f;
     .card-container{
       .card{
         width: 50px;
